- Gap was enough to fix the issue!

--- a/packages/elements/src/components/ui/tag/Tag.module.css
+++ b/packages/elements/src/components/ui/tag/Tag.module.css
@@ -42,7 +42,6 @@
 
   .icon {
     font-size: var(--current-icon-size);
-    box-sizing: content-box;
   }
 
   &.small {
